--- a/index.html
+++ b/index.html
@@ -13,16 +13,22 @@
     </div>
 
     <div id="dol">
-      <div id="strzalki">
-        <div id="gora_strz">
-          <button id="strz_gor">🡹</button>
-        </div>
+      <div id="dollewo">
+        <div id="strzalki">
+          <div id="gora_strz">
+            <button id="strz_gor">🡹</button>
+          </div>
 
-        <div id="dol_strz">
-          <button id="strz_lew">🡸</button>
-          <button id="strz_dol">🡻</button>
-          <button id="strz_pra">🡺</button>
+          <div id="dol_strz">
+            <button id="strz_lew">🡸</button>
+            <button id="strz_dol">🡻</button>
+            <button id="strz_pra">🡺</button>
+          </div>
         </div>
+      </div>
+
+      <div id="dolprawo">
+        <button id="cancel">Usuń planszę</button>
       </div>
     </div>
     <script src="app.js"></script>
